# checkers

./: .gitignore  README.md  checkers_engine  chess_engine.py  config.yaml  generate_stockfish_dataset.py  play_against_ai_terminal.py  pyproject.toml  train.py  training-stages.md
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
notebooks/: chess_positions_dataset_test.ipynb  dataset_test.ipynb  lichess_db_evals_test.ipynb  lichess_puzzles_dataset_test.ipynb  magnus_games_dataset_test.ipynb  model_predictions.ipynb  stockfish_dataset_test.ipynb  test.ipynb
results/: checkers1.0_results.json  checkers1.1_results.json  checkers1.2_results.json  checkers2.0_results.json  checkers2.1_results.json  checkers2.2_results.json  checkers2.4_results.json  checkers2.5_results.json  checkers3.0_results.json  checkers3.1_results.json  checkers3.2_results.json  checkers3.3_results.json
scripts/elo/: elo.env  elo.env.fast-filter  elo.env.final-calibration  elo.env.preset-rating-pool  run_cutechess_match.sh  run_elo_gauntlet.sh  run_elo_pipeline.sh  run_ordo_rating.sh
src/common/: tools.py  utils.py
src/data/: download.py
src/evaluate/: mcts.py
src/model/: models.py  trainer.py
src/preprocess/: build_features.py  datasets.py  process_datasets.py
